--- a/src/Frontend/src/app/Feature/profile/doctor/doctor.html
+++ b/src/Frontend/src/app/Feature/profile/doctor/doctor.html
@@ -75,11 +75,11 @@
             <button
               type="button"
               class="btn btn-outline-primary ms-1 mt-2"
-              [routerLink]="['/doc-profile/blog/add']"
+              [routerLink]="['/doc-profile/blogs']"
               [routerLinkActive]="'active'"
               [routerLinkActiveOptions]="{ exact: true }"
             >
-              Add blog
+              Blogs
             </button>
           </div>
         </div>
