--- a/src/Frontend/src/app/Feature/Doctor/doctor-learn-more/doctor-learn-more.html
+++ b/src/Frontend/src/app/Feature/Doctor/doctor-learn-more/doctor-learn-more.html
@@ -30,17 +30,19 @@
             <img
               [src]="getFullImageUrl(doctor.imgUrl)"
               class="img-fluid rounded-start"
-              alt="{{ doctor.fName }} {{doctor.lName}}"
+              alt="{{ doctor.fName }} {{ doctor.lName }}"
               style="height: 100%; object-fit: cover"
             />
           </div>
           <div class="col-md-7">
             <div class="card-body p-4">
-              <h3 class="card-title text-dark fw-bold">{{ doctor.fName }} {{doctor.lName}}</h3>
+              <h3 class="card-title text-dark fw-bold">
+                {{ doctor.fName }} {{ doctor.lName }}
+              </h3>
               <p class="card-text mb-2">
                 <strong>Pet Speciality:</strong>
                 <span class="text-muted">
-                        {{doctor.petSpecialty}}
+                  {{ doctor.petSpecialty }}
                 </span>
               </p>
               <p class="card-text mb-2">
@@ -53,27 +55,35 @@
               </p>
               <p class="card-text mb-2">
                 <strong>Certificate: </strong>
-                <a class="" [href]="getFullImageUrl(doctor.certificateUrl)">View Certificate
+                <a class="" [href]="getFullImageUrl(doctor.certificateUrl)"
+                  >View Certificate
                 </a>
               </p>
               <p class="card-text mb-2">
                 <strong>Address: </strong>
-                <span class="text-muted"> {{ doctor.city }} {{doctor.street}}</span>
+                <span class="text-muted">
+                  {{ doctor.city }} {{ doctor.street }}</span
+                >
+              </p>
 
               <div class="mt-3 d-flex gap-2">
-              <p class="card-text mb-2">
+                <p class="card-text mb-2">
                   <a routerLink="/login">Login,</a>
                   <!-- <a (click)="getBackToDoctorAfterLogin()">Login,</a> -->
-                  <span> to book an appointment with {{doctor.fName}} {{doctor.lName}}</span>
-              </p>
+                  <span>
+                    to book an appointment with {{ doctor.fName }}
+                    {{ doctor.lName }}</span
+                  >
+                </p>
               </div>
             </div>
           </div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- <div *ngIf="error && !loading" class="alert alert-danger text-center mt-4">
+    <!-- <div *ngIf="error && !loading" class="alert alert-danger text-center mt-4">
     {{ error }}
   </div> -->
+  </div>
 </div>
