--- a/src/Frontend/src/app/Feature/doctor-register-form/doctor-register-form.html
+++ b/src/Frontend/src/app/Feature/doctor-register-form/doctor-register-form.html
@@ -1,16 +1,17 @@
 <div class="container my-5">
+  <!-- هذا الفورم لم يعد يحتوي على حقول رفع الملفات -->
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" novalidate>
-
     <div *ngIf="generalErrors.length > 0" class="alert alert-danger">
       <ul>
         <li *ngFor="let error of generalErrors">{{ error }}</li>
       </ul>
     </div>
+
     <!-- First Name -->
     <div class="row mb-3">
       <label for="fName" class="col-sm-3 col-form-label">First Name</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" id="fName" formControlName="fName">
+        <input type="text" class="form-control" id="fName" formControlName="fName" />
         <div class="text-danger" *ngIf="(fName?.touched || isSubmitted) && fName?.errors?.['required']">
           First Name can't be blank
         </div>
@@ -21,7 +22,7 @@
     <div class="row mb-3">
       <label for="lName" class="col-sm-3 col-form-label">Last Name</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" id="lName" formControlName="lName">
+        <input type="text" class="form-control" id="lName" formControlName="lName" />
         <div class="text-danger" *ngIf="(lName?.touched || isSubmitted) && lName?.errors?.['required']">
           Last Name can't be blank
         </div>
@@ -32,7 +33,7 @@
     <div class="row mb-3">
       <label for="email" class="col-sm-3 col-form-label">Email</label>
       <div class="col-sm-9">
-        <input type="email" class="form-control" id="email" formControlName="email">
+        <input type="email" class="form-control" id="email" formControlName="email" />
         <div class="text-danger" *ngIf="(email?.touched || isSubmitted) && email?.errors?.['required']">
           Email can't be blank
         </div>
@@ -46,7 +47,7 @@
     <div class="row mb-3">
       <label for="phoneNumber" class="col-sm-3 col-form-label">Phone Number</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" id="phoneNumber" formControlName="phoneNumber">
+        <input type="text" class="form-control" id="phoneNumber" formControlName="phoneNumber" />
         <div class="text-danger" *ngIf="(phoneNumber?.touched || isSubmitted) && phoneNumber?.errors?.['required']">
           Phone Number can't be blank
         </div>
@@ -60,7 +61,7 @@
     <div class="row mb-3">
       <label for="password" class="col-sm-3 col-form-label">Password</label>
       <div class="col-sm-9">
-        <input type="password" class="form-control" id="password" formControlName="password">
+        <input type="password" class="form-control" id="password" formControlName="password" />
         <div class="text-danger" *ngIf="(password?.touched || isSubmitted) && password?.errors?.['required']">
           Password can't be blank
         </div>
@@ -70,18 +71,15 @@
       </div>
     </div>
 
-
     <!-- Confirm Password -->
     <div class="row mb-3">
       <label for="confirmationPassword" class="col-sm-3 col-form-label">Confirm Password</label>
       <div class="col-sm-9">
-        <input type="password" class="form-control" id="confirmationPassword" formControlName="confirmationPassword">
-        <div class="text-danger"
-          *ngIf="(confirmationPassword?.touched || isSubmitted) && confirmationPassword?.errors?.['required']">
+        <input type="password" class="form-control" id="confirmationPassword" formControlName="confirmationPassword" />
+        <div class="text-danger" *ngIf="(confirmationPassword?.touched || isSubmitted) && confirmationPassword?.errors?.['required']">
           Confirm Password can't be blank
         </div>
-        <div class="text-danger"
-          *ngIf="(confirmationPassword?.touched || isSubmitted) && confirmationPassword?.errors?.['compareValidator']">
+        <div class="text-danger" *ngIf="(confirmationPassword?.touched || isSubmitted) && confirmationPassword?.errors?.['compareValidator']">
           Passwords do not match
         </div>
       </div>
@@ -93,7 +91,9 @@
       <div class="col-sm-9">
         <select class="form-select" id="gender" formControlName="gender">
           <option value="" disabled>Select gender</option>
-          <option *ngFor="let option of genderOptions" [ngValue]="option.id">{{ option.name }}</option>
+          <option *ngFor="let option of genderOptions" [ngValue]="option.id">
+            {{ option.name }}
+          </option>
         </select>
         <div class="text-danger" *ngIf="(gender?.touched || isSubmitted) && gender?.errors?.['required']">
           Gender is required
@@ -107,7 +107,9 @@
       <div class="col-sm-9">
         <select class="form-select" id="petSpecialty" formControlName="petSpecialty">
           <option value="" disabled>Select pet specialty</option>
-          <option *ngFor="let option of petSpecialtyOptions" [ngValue]="option.id">{{ option.name }}</option>
+          <option *ngFor="let option of petSpecialtyOptions" [ngValue]="option.id">
+            {{ option.name }}
+          </option>
         </select>
         <div class="text-danger" *ngIf="(petSpecialty?.touched || isSubmitted) && petSpecialty?.errors?.['required']">
           Pet Specialty is required
@@ -115,29 +117,11 @@
       </div>
     </div>
 
-    <!-- Image -->
-    <div class="row mb-3">
-      <label for="image" class="col-sm-3 col-form-label">Image</label>
-      <div class="col-sm-9">
-        <input type="file" class="form-control" id="image" (change)="onImageSelected($event)">
-        <div *ngIf="imageError" class="text-danger mt-1">{{ imageError }}</div>
-      </div>
-    </div>
-
-    <!-- Certificate -->
-    <div class="row mb-3">
-      <label for="certificate" class="col-sm-3 col-form-label">Certificate</label>
-      <div class="col-sm-9">
-        <input type="file" class="form-control" id="certificate" (change)="onCertificateSelected($event)">
-        <div *ngIf="certificateError" class="text-danger mt-1">{{ certificateError }}</div>
-      </div>
-    </div>
-
     <!-- Price Per Hour -->
     <div class="row mb-3">
       <label for="pricePerHour" class="col-sm-3 col-form-label">Price Per Hour</label>
       <div class="col-sm-9">
-        <input type="number" class="form-control" id="pricePerHour" formControlName="pricePerHour">
+        <input type="number" class="form-control" id="pricePerHour" formControlName="pricePerHour" />
         <div class="text-danger" *ngIf="(pricePerHour?.touched || isSubmitted) && pricePerHour?.errors?.['required']">
           Price Per Hour can't be blank
         </div>
@@ -148,7 +132,7 @@
     <div class="row mb-3">
       <label for="country" class="col-sm-3 col-form-label">Country</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" id="country" formControlName="country">
+        <input type="text" class="form-control" id="country" formControlName="country" />
         <div class="text-danger" *ngIf="(country?.touched || isSubmitted) && country?.errors?.['required']">
           Country can't be blank
         </div>
@@ -159,7 +143,7 @@
     <div class="row mb-3">
       <label for="city" class="col-sm-3 col-form-label">City</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" id="city" formControlName="city">
+        <input type="text" class="form-control" id="city" formControlName="city" />
         <div class="text-danger" *ngIf="(city?.touched || isSubmitted) && city?.errors?.['required']">
           City can't be blank
         </div>
@@ -170,16 +154,18 @@
     <div class="row mb-3">
       <label for="street" class="col-sm-3 col-form-label">Street</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" id="street" formControlName="street">
+        <input type="text" class="form-control" id="street" formControlName="street" />
         <div class="text-danger" *ngIf="(street?.touched || isSubmitted) && street?.errors?.['required']">
           Street can't be blank
         </div>
       </div>
     </div>
 
-    <!-- Submit Button -->
+    <!-- زر الإرسال النهائي -->
     <div class="d-flex justify-content-end">
-      <button type="submit" class="btn btn-primary px-4">Register</button>
+      <button type="submit" class="btn btn-primary px-4" [disabled]="registerForm.invalid && isSubmitted">
+        Complete Registration
+      </button>
     </div>
   </form>
 </div>
