--- a/src/Frontend/src/app/Feature/ProductType/add-product-type/add-product-type.html
+++ b/src/Frontend/src/app/Feature/ProductType/add-product-type/add-product-type.html
@@ -3,13 +3,20 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <label for="name">Name:</label>
   <input id="name" formControlName="name" />
-  <div *ngIf="form.get('name')?.invalid && form.get('name')?.touched">Name is required.</div>
+  <div *ngIf="form.get('name')?.invalid && form.get('name')?.touched">
+    Name is required.
+  </div>
 
   <br />
 
-  <label for="breedId">Breed ID:</label>
-  <input id="breedId" type="number" formControlName="breedId" />
-  <div *ngIf="form.get('breedId')?.invalid && form.get('breedId')?.touched">Breed ID is required.</div>
+  <label for="breedId">Breed:</label>
+  <select id="breedId" formControlName="breedId">
+    <option [value]="null">Select a breed</option>
+    <option *ngFor="let b of breeds" [value]="b.id">{{ b.name }}</option>
+  </select>
+  <div *ngIf="form.get('breedId')?.invalid && form.get('breedId')?.touched">
+    Breed is required.
+  </div>
 
   <br />
 
