--- a/src/Frontend/src/app/Feature/admin-dashboard/admin-dashboard/admin-doctors/admin-doctors.html
+++ b/src/Frontend/src/app/Feature/admin-dashboard/admin-dashboard/admin-doctors/admin-doctors.html
@@ -56,18 +56,15 @@
 
           <!-- Certificate Button -->
           <td>
-            <button
+            <a
               *ngIf="doctor.certificateUrl"
               class="btn btn-sm text-primary"
-              (click)="
-                openImageModal(
-                  imageModal,
-                  'https://localhost:7102' + doctor.certificateUrl
-                )
-              "
+              [href]="'https://localhost:7102' + doctor.certificateUrl"
+              target="_blank"
+              rel="noopener noreferrer"
             >
-              <!-- <i class="bi bi-file-earmark-break-fill"></i>-->Certificate
-            </button>
+              View Certificate
+            </a>
           </td>
 
           <!-- Actions: Icons Only -->
@@ -142,7 +139,7 @@
   </ng-template>
 
   <!-- Image Modal -->
-  <ng-template #imageModal let-modal>
+  <!-- <ng-template #imageModal let-modal>
     <div class="modal-header border-0">
       <h5 class="modal-title">
         <i class="fas fa-certificate text-primary me-2"></i>
@@ -155,7 +152,15 @@
       ></button>
     </div>
     <div class="modal-body text-center p-2">
+      <iframe
+        *ngIf="isPdf"
+        [src]="currentImageUrl"
+        style="width: 100%; height: 70vh"
+        frameborder="0"
+      >
+      </iframe>
       <img
+        *ngIf="!isPdf"
         [src]="currentImageUrl"
         alt="Certificate"
         class="img-fluid rounded"
@@ -167,5 +172,5 @@
         Close
       </button>
     </div>
-  </ng-template>
+  </ng-template> -->
 </div>
