--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -65,7 +65,7 @@
               Add Pets
             </button>
 
-                        <button
+            <button
               type="button"
               class="btn btn-outline-primary ms-1"
               routerLink="/orders"
@@ -440,6 +440,15 @@
               ></a>
               <div class="team-content pet-info">
                 <h4>{{ pet.name }}</h4>
+                <h6>
+                  {{
+                    pet.status === "0"
+                      ? "Owned"
+                      : pet.status === "1"
+                      ? "For Adoption"
+                      : "For Rescue"
+                  }}
+                </h6>
                 <span>Age: {{ pet.age }} years</span>
 
                 <div class="mt-3 d-flex justify-content-center gap-2">
