--- a/src/Frontend/src/app/Feature/login/login.html
+++ b/src/Frontend/src/app/Feature/login/login.html
@@ -1,79 +1,88 @@
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-6 col-lg-5">
-      <div class="card">
-        <!-- Removed shadow -->
-        <div class="card-body">
-          <h3 class="text-center mb-4">Login</h3>
+<section id="hero" class="hero section pb-0">
+  <div
+    class="container section-title aos-init aos-animate pb-0"
+    data-aos="fade-up"
+  >
+    <h2>Login</h2>
 
-          <!-- Display error message if login fails -->
-          <div *ngIf="errorMessage" class="alert alert-danger mb-3">
-            {{ errorMessage }}
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5 mb-5">
+          <div class="card text-start">
+            <!-- Removed shadow -->
+            <div class="card-body">
+              <!-- <h3 class="text-center mb-4">Login</h3> -->
+
+              <!-- Display error message if login fails -->
+              <div *ngIf="errorMessage" class="alert alert-danger mb-3">
+                {{ errorMessage }}
+              </div>
+
+              <form
+                (ngSubmit)="onLogin()"
+                #loginForm="ngForm"
+                *ngIf="!accountService.isAuthenticated()"
+              >
+                <!-- Email -->
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    name="email"
+                    required
+                    [(ngModel)]="Email"
+                    placeholder="Enter your email"
+                    autocomplete="username"
+                  />
+                </div>
+
+                <!-- Password -->
+                <div class="mb-3">
+                  <label for="password" class="form-label">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    name="password"
+                    required
+                    [(ngModel)]="Password"
+                    placeholder="Enter your password"
+                    autocomplete="current-password"
+                  />
+                </div>
+
+                <!-- Remember Me -->
+                <div class="mb-3 form-check">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="remembered"
+                    name="remembered"
+                    [(ngModel)]="remembered"
+                  />
+                  <label class="form-check-label" for="remembered">
+                    Remember Me
+                  </label>
+                </div>
+
+                <!-- Submit Button -->
+                <button
+                  type="submit"
+                  class="btn btn-primary w-100"
+                  [disabled]="loginForm.invalid"
+                >
+                  Login
+                </button>
+              </form>
+              <p *ngIf="accountService.isAuthenticated()" class="text-center">
+                You are already logged in ✔️✔️
+              </p>
+            </div>
           </div>
-
-          <form
-            (ngSubmit)="onLogin()"
-            #loginForm="ngForm"
-            *ngIf="!accountService.isAuthenticated()"
-          >
-            <!-- Email -->
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                name="email"
-                required
-                [(ngModel)]="Email"
-                placeholder="Enter your email"
-                autocomplete="username"
-              />
-            </div>
-
-            <!-- Password -->
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input
-                type="password"
-                class="form-control"
-                id="password"
-                name="password"
-                required
-                [(ngModel)]="Password"
-                placeholder="Enter your password"
-                autocomplete="current-password"
-              />
-            </div>
-
-            <!-- Remember Me -->
-            <div class="mb-3 form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                id="remembered"
-                name="remembered"
-                [(ngModel)]="remembered"
-              />
-              <label class="form-check-label" for="remembered">
-                Remember Me
-              </label>
-            </div>
-
-            <!-- Submit Button -->
-            <button
-              type="submit"
-              class="btn btn-primary w-100"
-              [disabled]="loginForm.invalid"
-            >
-              Login
-            </button>
-          </form>
-          <p *ngIf="accountService.isAuthenticated()" class="text-center">
-            You are already logged in ✔️✔️
-          </p>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
