--- a/src/Frontend/src/app/Feature/doctors/doctors.html
+++ b/src/Frontend/src/app/Feature/doctors/doctors.html
@@ -128,6 +128,13 @@
                 >
                   Book Now
                 </button>
+
+                                <button
+                  class="btn btn-warning mx-2 btn-sm"
+                  (click)="addReview(doctor.id)"
+                >
+                  Review
+                </button>
                 } @else {
                 <div class="mt-3 d-flex justify-content-center gap-2">
                   <a
