--- a/src/Frontend/src/app/Feature/Review/review-main-page/review-main-page.html
+++ b/src/Frontend/src/app/Feature/Review/review-main-page/review-main-page.html
@@ -42,7 +42,7 @@
 
     <div>
         <button class="btn btn-outline-primary" (click)="bookAppointment()">Book Now</button>
-        <button class=" btn btn-outline-warning ms-2" (click)="goBack()">Make a Review</button>
+        <button class=" btn btn-outline-warning ms-2" (click)="makeReview()">Make a Review</button>
         <button class=" btn btn-outline-danger ms-2" (click)="goBack()">Go Back</button>
     </div>
   </div>
